# Forgessa

./: .gitignore  .gitmodules  Cargo.toml  README.md
samples/3-addr/: phi.txt  simple.txt
samples/c/: phi.c
samples/const_prop/: collatz.txt  gcd.txt  hanoifibfac.txt  loop.txt  mmm.txt  phi.txt  prime.txt  regslarge.txt  sieve.txt  sort.txt  struct.txt
samples/loop/: collatz.txt  gcd.txt  hanoifibfac.txt  loop.txt  mmm.txt  phi.txt  prime.txt  regslarge.txt  sieve.txt  sort.txt  struct.txt
samples/revert/: collatz.txt  gcd.txt  hanoifibfac.txt  loop.txt  mmm.txt  phi.txt  prime.txt  regslarge.txt  sieve.txt  sort.txt  struct.txt
samples/ssa/: gcd.txt  hanoifibfac.txt  loop.txt  mmm.txt  phi.txt  prime.txt  regslarge.txt  sieve.txt  sort.txt  struct.txt
samples/stripped/: collatz.txt  gcd.txt  hanoifibfac.txt  loop.txt  mmm.txt  phi.txt  prime.txt  regslarge.txt  sieve.txt  sort.txt  struct.txt
src/: analysis.rs  cli.rs  ir.rs  main.rs  opt.rs  samples.rs  ssa.rs
src/analysis/: cfg.rs  const_prop.rs  converter.rs  dom_frontier.rs  domtree.rs  loop_invariant.rs  natural_loop.rs  panning.rs  params.rs  phi.rs  ssa_to_aaa.rs
src/ir/: converter.rs  insert_block.rs  panning.rs  params.rs  ssa_to_aaa.rs
src/opt/: const_prop.rs  loop_invariant.rs
